Update code to use Apache httpclient